Updating 02_Data_Modelling.ipynb

--- a/02_Data_Modelling.ipynb
+++ b/02_Data_Modelling.ipynb
@@ -15,17 +15,15 @@
    "source": [
     "After executing \"01_HTML_Scrapper.ipynb\" we're left with the list saved in \"sorted_descriptor_list.txt\", which contains 160+ descriptors.\n",
     "\n",
-    "k-Means Clustering consists of moving cluster centroids through the vector space in a way that minimizes the distance between the centroids and the data points. That means it's a distance-based algorithm, and therefore very sensitive to the increasing of dimensions and prone to suffer from the \"curse of dimensionality\" a phenomenon well-known in Data Scince and Machine Learning which basically states that, as dimensions increase linearly, our vector space increases exponentially, implying we need exponentially more data observations/instances/entries to fill the same percentage of vector space as we would in lower dimensions.\n",
+    "k-Means Clustering consists of moving cluster centroids through the vector space in a way that minimizes the distance between the centroids and the data points. That means it's a distance-based algorithm, and therefore very sensitive to the increasing of dimensions and prone to suffer from the \"curse of dimensionality\" a phenomenon well-known in Data Scince and Machine Learning which basically states that, as dimensions increase linearly, our vector space increases exponentially, implying we need exponentially more data observations/instances/entries to fill the same percentage of vector space as we would in lower dimensions. Here's a good learning source: https://www.visiondummy.com/2014/04/curse-dimensionality-affect-classification/.\n",
     "\n",
-    "Moral of the story: if we don't want to gather much MUCH more album-descriptor data than what we currently have, we should keep our dimensionality low, a recommended practice in most ML problems. That means we can't just turn all 160+ descriptors into 160+ features of our dataset. In this notebook we'll be working on modelling our dataset with features based on these 160+ descriptors, losing/disturbing as little information as possible, but also keeping feature/dimension numbers as low as possible. For that, we'll make use of some strategies:\n",
+    "Moral of the story: if we don't want to gather much MUCH more album descriptor data than what we currently have, we should keep our dimensionality low, a recommended practice in most ML problems. That means we can't just turn all 160+ descriptors into 160+ features of our dataset. In this notebook we'll be working on modelling a dataset with features based on these 160+ descriptors, while losing/disturbing as little information as possible, but also keeping feature/dimension numbers as low as possible. For that, we'll make use of some strategies:\n",
     "\n",
     "1 - Removing descriptors that have no relation to sound\n",
     "\n",
     "2 - Grouping similar-enough descriptors together\n",
     "\n",
-    "3 - Fitting opposite-like descriptors in opposite sides of the same axis\n",
-    "\n",
-    "4 - Removing unpopular descriptors"
+    "3 - Removing unpopular descriptors"
    ]
   },
   {
@@ -167,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "id": "efe9bd0e-70a3-4508-80cf-08705ac68fb7",
    "metadata": {},
    "outputs": [],
@@ -283,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "id": "bbeab111-cf0a-42f7-a465-108f9e4a185e",
    "metadata": {},
    "outputs": [
@@ -293,7 +291,7 @@
        "105"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,11 +317,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ecd790ad-e318-422e-924e-d333b4c1ad1d",
+   "cell_type": "markdown",
+   "id": "c92cf3c4-8934-45d0-a02d-31dfe16dd40f",
    "metadata": {},
-   "outputs": [],
    "source": [
     "'natural' -> 'natural', 'rain', 'forest', 'desert', 'aquatic', 'tropical', 'seasonal', 'autumn', 'spring'\n",
     "'dark' -> 'dark', 'funereal', 'infernal', 'ominous', 'scary', 'disturbing', 'apocalyptic'\n",
@@ -337,7 +333,7 @@
     "'futuristic' -> 'futuristic', 'space'\n",
     "'humorous' -> 'humorous', 'sarcastic', 'vulgar', 'satirical'\n",
     "'spiritual' -> 'spiritual', 'ethereal', 'hypnotic'\n",
-    "'minimalism' -> 'minimalism', 'repetitive', 'sparse'\n",
+    "'minimalistic' -> 'minimalistic', 'repetitive', 'sparse'\n",
     "'progressive' -> 'progressive', 'microtonal', 'complex', 'polyphonic', 'avant-garde', 'atonal', 'technical'\n",
     "'bittersweet' -> 'bittersweet', 'longing'\n",
     "'surreal' -> 'surreal', 'psychedelic', 'lush'\n",
@@ -352,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "id": "0e439f68-ecec-4151-ba2a-ea5a7b38861a",
    "metadata": {},
    "outputs": [],
@@ -407,17 +403,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "id": "731fc80c-d1a1-4cb1-8431-bd935ad8bb1e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "46"
+       "44"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,67 +431,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53143950-4b87-4faf-a594-4d80a2511cd9",
+   "metadata": {},
+   "source": [
+    "mechanical\n",
+    "\n",
+    "suspenseful\n",
+    "\n",
+    "boastful\n",
+    "\n",
+    "tribal\n",
+    "\n",
+    "ritualistic\n",
+    "\n",
+    "martial"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "id": "141c2e4c-5373-4ac4-b8ba-4b5ac3896d3a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# After removing these, we're left with:\n",
     "\n",
-    "sorted_descriptors_3 = [('melodic', 429),\n",
+    "sorted_descriptors_3 = [('sad', 579),\n",
+    " ('surreal', 489),\n",
     " ('energetic', 484),\n",
-    " ('rhythmic', 319),\n",
-    " ('raw', 297),\n",
-    " ('anxious', 229),\n",
+    " ('happy', 467),\n",
+    " ('melodic', 429),\n",
+    " ('sentimental', 383),\n",
+    " ('humorous', 374),\n",
+    " ('progressive', 366),\n",
     " ('bittersweet', 349),\n",
+    " ('calm', 325),\n",
+    " ('rhythmic', 319),\n",
     " ('warm', 316),\n",
+    " ('raw', 297),\n",
+    " ('dark', 290),\n",
+    " ('anxious', 229),\n",
+    " ('cold', 224),\n",
+    " ('noisy', 217),\n",
+    " ('spiritual', 201),\n",
     " ('rebellious', 200),\n",
     " ('poetic', 186),\n",
+    " ('angry', 179),\n",
     " ('quirky', 179),\n",
     " ('eclectic', 176),\n",
-    " ('atmospheric', 162),\n",
-    " ('surreal', 489),\n",
     " ('urban', 175),\n",
-    " ('dark', 290),\n",
-    " ('progressive', 366),\n",
-    " ('humorous', 374),\n",
-    " ('noisy', 217), # calm\n",
-    " ('dense', 110),\n",
-    " ('sentimental', 383),\n",
-    " ('anthemic', 102),\n",
-    " ('romantic', 121),\n",
-    " ('angry', 179),\n",
+    " ('natural', 170),\n",
     " ('mysterious', 168),\n",
+    " ('atmospheric', 162),\n",
+    " ('romantic', 121),\n",
+    " ('dense', 110),\n",
+    " ('anthemic', 102),\n",
+    " ('minimalistic', 102),\n",
     " ('heavy', 67),\n",
-    " ('cold', 224),\n",
+    " ('apathetic', 60),\n",
     " ('epic', 55),\n",
+    " ('futuristic', 54),\n",
     " ('pastoral', 50),\n",
     " ('acoustic', 47),\n",
-    " ('sad', 493),\n",
-    " ('serious', 43),\n",
-    " ('calm', 325),\n",
-    " ('spiritual', 201),\n",
-    " ('happy', 467),\n",
-    " ('minimalistic', 134),\n",
-    " ('futuristic', 54),\n",
-    " ('apathetic', 60),\n",
-    " ('natural', 170)]"
+    " ('serious', 43)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "id": "c07c5c72-9534-4291-9f46-e445daf5a69d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "39"
+       "38"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,157 +520,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a73a026a-931e-470a-96a2-fecdb8de8859",
-   "metadata": {},
-   "source": [
-    "## 4 - Fitting opposite-like descriptors in opposite sides of the same axis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f930f913-486a-4c06-ab69-ac6fb1a66466",
-   "metadata": {},
-   "source": [
-    "For k-Means Clustering, the more we are able to distance data points, the better. Therefore, it would be ideal if every descriptors had a polar-opposite descriptor to match, so both could be fit into a single axis, one represented as \"1\" and the other as \"-1\". Unfortunately, that's not the case when we talk about such subjective concepts. However, even when the opposition is not perfect, we can find \"good enough\" pairs of descriptors that differ a lot, even if the presence of one doesn't necessarily imply the absence of the other.\n",
-    "\n",
-    "Axis:\n",
-    "\n",
-    "1:  [melodic - rhythmic]\n",
-    "\n",
-    "2:  [energetic - apathetic]\n",
-    "\n",
-    "3:  [raw - surreal]\n",
-    "\n",
-    "4:  [0 - anxious]\n",
-    "\n",
-    "5:  [0 - bittersweet]\n",
-    "\n",
-    "6:  [warm - cold]\n",
-    "\n",
-    "7:  [rebellious - mysterious]\n",
-    "\n",
-    "8:  [0 - poetic]\n",
-    "\n",
-    "9:  [0 - quirky]\n",
-    "\n",
-    "10: [0 - eclectic]\n",
-    "\n",
-    "11: [0 - atmospheric]\n",
-    "\n",
-    "12: [urban - pastoral]\n",
-    "\n",
-    "13: [dark - romantic]\n",
-    "\n",
-    "14: [progressive - anthemic]\n",
-    "\n",
-    "15: [humorous - serious]\n",
-    "\n",
-    "16: [calm - heavy/noisy]\n",
-    "\n",
-    "17: [dense - acoustic]\n",
-    "\n",
-    "18: [0 - sentimental]\n",
-    "\n",
-    "19: [angry - spiritual]\n",
-    "\n",
-    "20: [sad - happy]\n",
-    "\n",
-    "21: [epic - minimalistic]\n",
-    "\n",
-    "22: [futuristic - natural]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "5d5cb14b-3f8c-4460-a387-71e85567fed6",
    "metadata": {},
    "source": [
-    "As things stand, we just transformed 160+ descriptors in 22 features/axis, which is great progress and, for now, good enough for testing. However we're not done with Data Modelling."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e07d1b84-df5c-4aa4-8d36-c35e54d43480",
-   "metadata": {},
-   "source": [
-    "# Scales"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6d46f017-0ad8-4d04-8135-4d63e602b78a",
-   "metadata": {},
-   "source": [
-    "As a motivating example, let's ponder for a moment about what's into axis 22 (futuristic <-> natural). This axis can be decomposed into:\n",
-    "- ('futuristic', 'space' <-> 'natural', 'rain', 'forest', 'desert', 'aquatic', 'tropical', 'seasonal', 'autumn', 'spring')\n",
-    "\n",
-    "Let's say \"futuristic\" is represented as \"1\" and \"natural\" as \"-1\". So, what happens if, by chance, an album shows the descriptors: 'futuristic', 'rain' and 'aquatic'? Should we represent it as a -1 for presenting 2 descriptors in the \"natural\" composition? Or maybe as a 0 since it presents descriptors in both sides of axis 22?\n",
-    "\n",
-    "For now, we'll address this problem with a simplistic approach: for a given axis XX (A - B), any appearence of a descriptor that belongs to the \"A\" composition will add \"+1\" to the axis value, and any appearence of a descriptor that belongs to the \"B\" composition will add \"-1\" to the axis value. The resulting number will be the final feature number of a given instance/entry/album in that axis."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ec6aff2-010b-4d47-9a0c-842975062858",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# After removing these, we're left with:\n",
-    "\n",
-    "sorted_descriptors_4 = [('melodic', 429),\n",
-    " ('energetic', 484),\n",
-    " *('rhythmic', 319), # melodic\n",
-    " *('raw', 297), # surreal\n",
-    " ('anxious', 229),\n",
-    " ('bittersweet', 349),\n",
-    " ('warm', 316),\n",
-    " ('rebellious', 200),\n",
-    " ('poetic', 186),\n",
-    " ('quirky', 179),\n",
-    " ('eclectic', 176),\n",
-    " ('atmospheric', 162),\n",
-    " ('surreal', 489),\n",
-    " ('urban', 175),\n",
-    " ('nocturnal', 143),\n",
-    " ('dark', 290),\n",
-    " ('progressive', 366),\n",
-    " ('humorous', 374),\n",
-    " *('noisy', 217), # calm\n",
-    " ('dense', 110),\n",
-    " ('sentimental', 383),\n",
-    " *('anthemic', 102), # progressive\n",
-    " *('romantic', 121), # dark\n",
-    " *('angry', 179), # spiritual\n",
-    " *('mysterious', 168), # rebellious\n",
-    " *('heavy', 67), # calm (just like 'noisy', but in a lesser degree than 'noisy')\n",
-    " *('cold', 81), # warm\n",
-    " *('epic', 55), # minimalistic\n",
-    " *('pastoral', 50), # urban\n",
-    " *('acoustic', 47), # dense\n",
-    " ('sad', 493),\n",
-    " *('serious', 43), # humorous\n",
-    " ('calm', 325),\n",
-    " ('spiritual', 201),\n",
-    " *('happy', 467), # sad\n",
-    " ('minimalistic', 134),\n",
-    " *('futuristic', 54), # natural\n",
-    " *('apathetic', 60), # energetic\n",
-    " ('natural', 170),\n",
-    " ('mechanical', 31),\n",
-    " ('suspenseful', 27),\n",
-    " ('boastful', 16),\n",
-    " ('tribal', 14),\n",
-    " ('ritualistic', 9),\n",
-    " ('martial', 8)]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6a6e7322-1ec1-4d5c-85ab-2a501d553683",
-   "metadata": {},
-   "source": [
-    "## 4 - Removing unpopular descriptors"
+    "As things stand, we just went from 160+ descriptors to 38, which is great progress for now. However we're not done with Data Modelling, and will continue to reduce these numbers later."
    ]
   }
  ],
